--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
 
+:root {
+  --is-primary: #000000;
+  --is-secondary: #00d1b2;
+  --is-tertiary: #ffffff;
+}
+
 body,
 html {
+  color: var(--is-primary);
   font-family: 'Ubuntu', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
   margin: 0;
   padding: 0;
+}
+
+main {
+  margin: 0 auto;
+  max-width: 1024px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+header > img {
+  border-radius: 100px;
+  max-width: 100px;
+}
+
+header > p {
+  margin: 0;
+  max-width: 350px;
+  text-align: center;
+}
+
+header > h1 {
+  background-color: var(--is-secondary);
+  border-radius: 100px;
+  color: var(--is-tertiary);
+  font-size: 14px;
+  font-weight: 700;
+  margin: 10px 0;
+  padding: 5px;
 }
