--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,12 +2,14 @@
 
 :root {
   --is-primary: #000000;
-  --is-secondary: #00d1b2;
+  --is-secondary: #209cee;
   --is-tertiary: #ffffff;
+  --is-background: #fafafa;
 }
 
 body,
 html {
+  background-color: var(--is-background);
   color: var(--is-primary);
   font-family: 'Ubuntu', sans-serif;
   font-size: 16px;
@@ -15,6 +17,14 @@ html {
   line-height: 1.5;
   margin: 0;
   padding: 0;
+}
+
+a,
+a:hover,
+a:active,
+a:focus {
+  color: var(--is-tertiary);
+  text-decoration: none;
 }
 
 main {
@@ -31,6 +41,7 @@ header {
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 header > img {
@@ -51,5 +62,43 @@ header > h1 {
   font-size: 14px;
   font-weight: 700;
   margin: 10px 0;
-  padding: 5px;
+  padding: 2.5px;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+section > ul {
+  list-style: none;
+  padding: 0;
+}
+
+section > ul > li {
+  line-height: 50px;
+}
+
+section > ul > li > a {
+  background: var(--is-secondary);
+  border-radius: 100px;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 20px;
+  width: 350px;
+
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: center;
+}
+
+@media (max-width: 768px) {
+  section > ul > li > a {
+    width: 300px;
+  }
 }
